--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pmarsceill/just-the-docs
 show_downloads: false
-title: Classes Taught
+title: Home
 description: Teaching
 
 search_enabled: false
